--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
@@ -65,4 +66,5 @@ body {
 	height: 100vh;
 	width: 100%;
 	background-color: #ffb84e;
+	font-family: "Roboto", sans-serif;
 }
