--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100%;
 	background-color: #ffb84e;
 	font-family: "Roboto", sans-serif;
